# tilth

./: .env.example  .gitignore  404.html  CLAUDE.md  LICENSE  README.md  USAGE.md  deep-dives.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.json
.github/workflows/: docs.yml  release.yml
architecture/agent-visibility/: index.html
architecture/anatomy-of-a-run/: index.html
architecture/memory-channels/: index.html
architecture/overview/: index.html
assets/IMAGE_STYLE/: index.html
assets/SITE_STYLE/: index.html
deep-dives/: index.html
deep-dives/agent-visibility/: index.html
deep-dives/caps/: index.html
deep-dives/hyper-observability/: index.html
deep-dives/reset-mechanics/: index.html
deep-dives/resume-mechanics/: index.html
deep-dives/session-layout/: index.html
deep-dives/task-format/: index.html
deep-dives/token-recording/: index.html
deep-dives/two-loops/: index.html
deep-dives/worker-evaluator-dialogue/: index.html
docs/: index.md
docs/architecture/: agent-visibility.md  anatomy-of-a-run.md  memory-channels.md  overview.md
docs/assets/: IMAGE_STYLE.md  SITE_STYLE.md
docs/deep-dives/: agent-visibility.md  caps.md  hyper-observability.md  index.md  prd-json.md  reset-mechanics.md  resume-mechanics.md  seeding.md  session-layout.md  task-format.md  token-recording.md  two-loops.md  worker-evaluator-dialogue.md
docs/getting-started/: feature-author-skill.md  installation.md  resetting.md  resuming-and-resetting.md  resuming.md  running-the-demo.md  visualizing.md  your-own-project.md
docs/reference/: releasing.md  safety-guards.md
docs/stylesheets/: extra.css
documents/: chat.html
examples/seed-reference/todo-cli/: README.md  prd.json
examples/seed-reference/todo-cli/tests/: test_t001_hello.py  test_t002_package.py  test_t003_add.py  test_t004_list.py  test_t005_done.py
getting-started/feature-author-skill/: index.html
getting-started/installation/: index.html
getting-started/resetting/: index.html
getting-started/resuming/: index.html
getting-started/resuming-and-resetting/: index.html
getting-started/running-the-demo/: index.html
getting-started/visualizing/: index.html
getting-started/your-own-project/: index.html
harness/: __init__.py  client.py  loop.py  workspace.py
harness/hooks/: __init__.py  pre_tool.py
harness/tools/: __init__.py
proposals/: prep-feature.md  v1-implementation-plan.md  v1-worker-evaluator-dialogue.md
proposals/completed/: frictions-2026-05-26.md  prep-feature.md  v1-implementation-plan.md  v1-worker-evaluator-dialogue.md
proposals/observability-dashboard/: README.md  mockup-a-ledger.html  mockup-b-flight-recorder.html
proposals/probes/: phase1_verdict_tool_call_probe.py
reference/releasing/: index.html
reference/safety-guards/: index.html
search/: search_index.json
skills/: README.md
skills/tilth-feature-author/: SKILL.md
skills/tilth-feature-author/references/: tilth-tasks-template.md
stylesheets/: extra.css
tests/: test_agents_md_append.py  test_assistant_history_message.py  test_case_parsing.py  test_cleanse.py  test_cli_router.py  test_client_routing.py  test_config.py  test_context_files.py  test_dispatch_hook_runs.py  test_env_template_no_drift.py  test_evaluator_prompt_contains_seed_test_file.py  test_evaluator_prompt_contains_validator_output.py  test_evaluator_raw_capture.py  test_evaluator_sees_ledger.py  test_evaluator_verdict_parsing.py  test_feature_dir.py  test_files_path_escape.py  test_finish_reason.py  test_info_config.py  test_init_cmd.py  test_iter_events.py  test_judge_seed_test_embed.py  test_ledger_includes_case.py  test_ledger_io.py  test_ledger_resume.py  test_limit_utilization.py  test_loop_empty_response_abort.py  test_loop_provider_health.py  test_loop_structured_feedback.py  test_memory_manifest.py  test_missing_config.py  test_no_harness_filenames_in_agent_text.py  test_overview_injection.py  test_parse_json_lenient.py  test_paths.py  test_prd_location.py  test_prep_feature_resolution.py  test_prompt_dump.py  test_proposed_learnings.py  test_push_pr.py  (+27 more)
tilth/: __init__.py  case.py  cli.py  client.py  loop.py  memory.py  paths.py  session.py  summary.py  tasks.py  usage.py  validators.py  verdict.py  visualize.py  workspace.py
tilth/data/: env.example
tilth/hooks/: __init__.py  post_edit.py  pre_tool.py
tilth/prompts/: agents_update.md  evaluator.md  judge.md  propose_learning.md  system.md
tilth/seed/: __init__.py  frontend.py  interview.py  prompts.md  sink.py  tools.py  tty.py
tilth/tools/: __init__.py  bash.py  files.py  search.py
tilth/visualize/: __init__.py  app.js  render.py  server.py  theme.css  theme.py
