[project]
name = "tilth"
version = "0.1.0"
description = "Tilth — minimal long-running agent harness against any OpenAI-compatible endpoint. Brain/Hands/Session split, Ralph loop, four memory channels."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.6",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-glightbox>=0.4",
]

[project.scripts]
tilth = "tilth.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tilth"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
