[project]
name = "tilth"
version = "0.1.0"
description = "Tilth — minimal long-running agent harness against any OpenAI-compatible endpoint. Brain/Hands/Session split, Ralph loop, four memory channels."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Sam Keen", email = "sam@alteredcraft.com" },
]
keywords = [
    "agent",
    "llm",
    "ralph-loop",
    "long-running-agents",
    "autonomous-agents",
    "openai-compatible",
    "openrouter",
    "agent-harness",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "openai>=1.40",
    "pydantic>=2.6",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/AlteredCraft/tilth"
Documentation = "https://alteredcraft.github.io/tilth/"
Repository = "https://github.com/AlteredCraft/tilth"
Issues = "https://github.com/AlteredCraft/tilth/issues"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-glightbox>=0.4",
]

# Dev-only tooling (PEP 735). Installed by `uv sync` for contributors but never
# shipped to end users of `uvx tilth` / `pip install tilth` — keep runtime
# dependencies (above) lean.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
tilth = "tilth.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tilth"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

# Scope pytest to the harness's own tests — `sessions/*/workspace/tests/` may
# contain seed tests from past runs (and, since prep-time worktree creation,
# from past preps). They're meant for the worker, not for Tilth's own suite,
# and their identical basenames (test_t001_*.py, etc.) collide on collection.
[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["sessions", ".venv", "build", "dist"]

# Session worktrees under sessions/<id>/workspace/ each contain a
# pyproject.toml that the worker creates as part of T-001 (`uv init`). uv's
# default workspace auto-discovery would add each one to `members`, which
# couples their dependency graphs to tilth's lockfile and breaks `uv sync`
# every time `tilth reset` removes the worktree. Exclude them outright.
[tool.uv.workspace]
members = []
exclude = ["sessions"]
